[tool.poetry]
name = "LLM-language-finetune"
version = "0.1.0"
description = "Training repo for fine tuning LLMs"
authors = ["Diego Ros"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]
